# eBiblis

./: .gitignore  CMakeLists.txt  EpubReader.qml  HomeView.qml  LibraryView.qml  bookparsers.cpp  bookparsers.h  constants.h  homemodel.cpp  homemodel.h  homequeries.cpp  homequeries.h  ioutil.cpp  ioutil.h  librarymodel.cpp  librarymodel.h  libraryqueries.cpp  libraryqueries.h  main.cpp  main.qml  structs.h
android/: AndroidManifest.xml
android-sources/: AndroidManifest.xml
lib/quazip-master/: CMakeCache.txt  cmake_install.cmake
lib/quazip-master/quazip/: cmake_install.cmake  quazip1-qt6.pc
resources/: anatomy.epub  epubReader.html  web.qrc
